tests/NormalTests/paczka1/fuzzy1/87079747.err
Error in line 4: 6vzfJ0jXs A48 99,3
Error in line 6: 6vzfJ0jXs S398 55,1
Error in line 1: iZQ A48 50,3
Error in line 7: 6vzfJ0jXs S644 38,2
Error in line 13: 6vzfJ0jXs S398 77,1
Error in line 26: iZQ A115 53,8
Error in line 31: A115 A115 28,9
Error in line 36: En7fLrKrTw S644 -1,6
Error in line 28: En7fLrKrTw S644 41,9
